--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,6 +12,16 @@
         android:id="@+id/toplayout1"
         android:background="@drawable/side_nav_bar">
 
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_add_black_24dp"
+            android:layout_alignParentEnd="true"
+            android:tint="@color/colorWhite"
+            android:id="@+id/add_account"
+            android:layout_margin="8dp"/>
+
+
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_centerInParent="true"
