--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,8 +13,9 @@
     <color name="colorLightYello">#FFD700</color>
     <color name="colorRed">#FF1744</color>
     <color name="colorRedEmergency">#FF0000</color>
-    <color name="colorBlueFlash">#039be5</color>
+    <color name="colorBlueFlash">#2196f3</color>
     <color name='colorGrey'>#b0bec5</color>
+    <color name='colorGreyDark'>#607d8b</color>
     <color name="background">#dddddd</color>
     <color name='colorGreenNew'>#5ad9a4</color>
 
